Fix overflowing plugin names on small resolutions

--- a/templates/2k11/admin/style.css
+++ b/templates/2k11/admin/style.css
@@ -1139,6 +1139,7 @@ summary {
 }
 
 #workspace,
+.plugin_data,
 .serendipity_statistics > .wide_box {
     overflow: hidden;
 }
